# SkripnikovOV_CourseProj_3_SkyPro

./: .gitignore  README.md  ex_database.ini  main.py  pyproject.toml
htmlcov/: index.html
src/: DBManager.py  HH_api.py  config.py  database_utils.py
tests/: conftest.py  test_config.py  test_database_utils.py  test_dbmanager.py  test_hh_api.py  test_main.py
